--- a/Eugene Onegin/Eugene Onegin.vcxproj
+++ b/Eugene Onegin/Eugene Onegin.vcxproj
@@ -121,6 +121,7 @@
   <ItemGroup>
     <Text Include="input.txt" />
     <Text Include="output.txt" />
+    <Text Include="output2.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
