--- a/Eugene Onegin/Eugene Onegin.vcxproj.filters
+++ b/Eugene Onegin/Eugene Onegin.vcxproj.filters
@@ -22,5 +22,8 @@
   <ItemGroup>
     <Text Include="input.txt" />
     <Text Include="output.txt" />
+    <Text Include="output2.txt">
+      <Filter>Source Files</Filter>
+    </Text>
   </ItemGroup>
 </Project>
